--- a/dsp_server/makefile
+++ b/dsp_server/makefile
@@ -12,17 +12,17 @@ LINK_INSTALL_DIR?=$(DEPOT_DSP)/syslink_2_21_01_05
 OSAL_INSTALL_DIR?=$(DEPOT_DSP)/osal_1_23_00_04
 CMEM_INSTALL_DIR?=$(DEPOT_DSP)/linuxutils_3_23_00_01
 DSPLIB_INSTALL_DIR?=$(DEPOT_DSP)/dsplib_3_1_1_1
-IMGLIB_INSTALL_DIR?=$(DEPOT_DSP)/imglib_2_02_00_00
+IMGLIB_INSTALL_DIR?=$(DEPOT_DSP)/c64plus-imglib_2_02_00_00
 CODEGEN_INSTALL_DIR?=$(DEPOT_DSP)/cgt_c6000_7.4.2
 
 CGTOOLS_C674?=$(CODEGEN_INSTALL_DIR)
 
 #uncomment this for verbose builds
-#XDCOPTIONS=v
+XDCOPTIONS=v
 
 XDCARGS?=CGTOOLS_C674=\"$(CGTOOLS_C674)\"
 
-XDCPATH?=$(CE_INSTALL_DIR)/packages;$(XDAIS_INSTALL_DIR)/packages;$(BIOS_INSTALL_DIR)/packages;$(LINK_INSTALL_DIR)/packages;$(IPC_INSTALL_DIR)/packages;$(FC_INSTALL_DIR)/packages;$(OSAL_INSTALL_DIR)/packages;$(CMEM_INSTALL_DIR)/packages;$(DSPLIB_INSTALL_DIR)/packages;$(IMGLIB_INSTALL_DIR)/packages
+XDCPATH?=$(CE_INSTALL_DIR)/packages;$(XDAIS_INSTALL_DIR)/packages;$(BIOS_INSTALL_DIR)/packages;$(LINK_INSTALL_DIR)/packages;$(IPC_INSTALL_DIR)/packages;$(FC_INSTALL_DIR)/packages;$(OSAL_INSTALL_DIR)/packages;$(CMEM_INSTALL_DIR)/packages;$(DSPLIB_INSTALL_DIR)/packages;$(IMGLIB_INSTALL_DIR)
 
 XDC?=$(XDC_INSTALL_DIR)/xdc
 
